--- a/data-layers/data-layer-descriptions.qmd
+++ b/data-layers/data-layer-descriptions.qmd
@@ -1,37 +1,48 @@
 ---
-title: "6. Description of Data Layers"
+title: "Description of Data Layers"
 toc: true
+callout-icon: false
+callout-appearance: simple
 ---
-
-# Description of data layers
 
 ### Tables describing data layers (Table 7.1) and sources (Table 7.2)
 
-**Table 7.1. Data layers of `r assessmentYear` global OHI assessment**
+**Table 7.1. Data layers of 2023 global OHI assessment**
 A brief overview of all the data layers used to calculate the global OHI.  The "Data layer" variable provides links to a full description of the data layer.  The "Description" variable provides link/s to the data preparation scripts (when available).   See Table 7.2 for a description of the data sources used to create these data layers.
 
+```{r, include=FALSE}
+library(tidyverse)
+library(magrittr)
+library(kableExtra)
+```
+
+::: {.callout-note collapse=true}
+### Table 7.1. Data layers of 2023 global OHI assessment (click to expand)
 ```{r DataLayer Table, echo=FALSE, warning=FALSE, error=FALSE, messages=FALSE}
+
+assessmentYear <- 2024
+
 options(dplyr.summarise.inform=F)
 ## Get list of layers, name, description:
-base <- read.csv(here("metadata_documentation/layers_eez_base.csv")) %>%
+base <- read.csv("https://raw.githubusercontent.com/OHI-Science/ohi-global/76634d93f7fbc2470a2144793d15924d55f552ff/metadata_documentation/layers_eez_base.csv") %>%
   # mutate(Name = paste0("[", name, "](", "http://ohi-science.org/ohi-global/layers#", layer, ")")) %>%
   select(layer, Name = name, Description = description)
 
 ## Get dimension/targets
-target <- read.csv(here("metadata_documentation/layers_eez_targets.csv"), stringsAsFactors = FALSE) %>%
+target <- read.csv("https://raw.githubusercontent.com/OHI-Science/ohi-global/76634d93f7fbc2470a2144793d15924d55f552ff/metadata_documentation/layers_eez_targets.csv", stringsAsFactors = FALSE) %>%
   mutate(goal = ifelse(dimension %in% c("pressure", "resilience", "spatial", "weighting"), dimension, goal)) %>%
   select(layer, goal) %>%
     unique() %>%
   group_by(layer) %>%
   summarize(Dimension = paste(goal, collapse = ", "))
 
-# setdiff(base$layer, target$layer) # the sp_alien_species ends up not being used
-# setdiff(target$layer, base$layer)
+# setdiff(base$layer, target$layer) # the "sp_alien_species" and "hab_softbottom_extent" ends up not being used
+# setdiff(target$layer, base$layer) # character(0)
 
 data <- left_join(target, base, by="layer")
 
 ## Get data prep url (will be a link in description)
-url <- read.csv(here("metadata_documentation/layers_eez_dataprep.csv")) %>%
+url <- read.csv("https://raw.githubusercontent.com/OHI-Science/ohi-global/76634d93f7fbc2470a2144793d15924d55f552ff/metadata_documentation/layers_eez_dataprep.csv") %>%
   group_by(layer) %>%
   mutate(N = 1) %>%
   mutate(method_count = cumsum(N)) %>%
@@ -48,7 +59,7 @@ data <- left_join(data, url, by="layer") %>%
   select(layer, Name, Description, Dimension)
 
 ## get references:
-refs <- read.csv(here("metadata_documentation/layers_eez_reference.csv")) %>%
+refs <- read.csv("https://raw.githubusercontent.com/OHI-Science/ohi-global/76634d93f7fbc2470a2144793d15924d55f552ff/metadata_documentation/layers_eez_reference.csv") %>%
   select(layer, reference) %>%
   unique() %>%
   mutate(ref = paste0("@", reference)) %>%
@@ -58,13 +69,13 @@ refs <- read.csv(here("metadata_documentation/layers_eez_reference.csv")) %>%
   #mutate(reference = paste0("[", reference, "]")) %>%
   select(layer, References=reference)
   
-# setdiff(data$layer, refs$layer) # these are reasonable layers to not have references
+# setdiff(data$layer, refs$layer) # "element_wts_hab_pres_abs" "uninhabited"- these are reasonable layers to not have references
 
 data <- data %>%
   left_join(refs, by="layer")
 
 ### Get method updates
-updates <- read.csv(here("metadata_documentation/layers_eez_updates.csv")) %>%
+updates <- read.csv("https://raw.githubusercontent.com/OHI-Science/ohi-global/76634d93f7fbc2470a2144793d15924d55f552ff/metadata_documentation/layers_eez_updates.csv") %>%
   select(layer, Updates=updates) %>%
   unique()
 
@@ -76,31 +87,34 @@ data <- data %>%
 
 kable(data) %>%
   kableExtra::kable_styling(full_width = F)
-
 ```
+:::
 
-<br/> 
 
 **Table 7.2. Data sources used to create data layers for `r assessmentYear` global OHI assessment**
 A brief overview of the data sources used to calculate the global OHI.
 
+::: {.callout-note collapse=true}
+### Table 7.2. Data sources used to create data layers (click to expand)
 ```{r DataSources Table, echo=FALSE, warning=FALSE, error=FALSE, messages=FALSE}
 
 ### Get datasource primary data
 
-
 ## get source data
-ds_source <- read.csv(here("metadata_documentation/layers_eez_data_sources.csv")) %>%
+ds_source <- read.csv("https://raw.githubusercontent.com/OHI-Science/ohi-global/76634d93f7fbc2470a2144793d15924d55f552ff/metadata_documentation/layers_eez_data_sources.csv") %>%
   mutate(ds_reference = paste0("@", ds_reference)) %>%
-  select(Reference = ds_reference, "Description" = ds_description, Years=ds_years, Resolution = ds_native_resolution, Updated = sprintf("ds_updated_%s", assessmentYear))
+  select(Reference = ds_reference, "Description" = ds_description, Years=ds_years, Resolution = ds_native_resolution, Updated = sprintf("ds_updated_%s", assessmentYear - 1))
+
+# made it work by going up to 2023, ensure this is updated for 2024!!
+
 kable(ds_source) %>%
   kableExtra::kable_styling(full_width = F)
-
 ```
+:::
 
 
+# RETURN TO THIS!
+<!-- {r child = 'layers_all.Rmd'} -->
+<!-- ## Need to run CombineLayers.R to create the relevant Rmd file -->
+<!-- # 'https://raw.githubusercontent.com/OHI-Science/ohi-global/draft/documents/methods/layers_all.Rmd' -->
 
-```{r child = 'layers_all.Rmd'}
-## Need to run CombineLayers.R to create the relevant Rmd file
-# 'https://raw.githubusercontent.com/OHI-Science/ohi-global/draft/documents/methods/layers_all.Rmd'
-```
