big updates: added reference sections (and to TOC for each page), updated banner for Home page, worked through other issues with Sophia. Big favicon changes.

--- a/goals/goal-models-data.qmd
+++ b/goals/goal-models-data.qmd
@@ -1,5 +1,6 @@
 ---
 title: "5. Goal Models and Data"
+bibliography: ../references.bib
 toc: true
 ---
 
@@ -1091,3 +1092,6 @@ data_layers(goal="TR", dimension=c("pressure"))
 ```{r TR r, results="asis", echo=FALSE}
 data_layers(goal="TR", dimension=c("resilience"))
 ```
+
+
+## References
