--- a/references.bib
+++ b/references.bib
@@ -13031,3 +13031,15 @@ Section: Research Article},
 	pages = {2443--2450},
 	file = {Full Text PDF:/Users/aramji/Zotero/storage/K9TFLLZI/McGinnity et al. - 2003 - Fitness reduction and potential extinction of wild.pdf:application/pdf;Snapshot:/Users/aramji/Zotero/storage/UIPKGFVU/rspb.2003.html:text/html},
 }
+
+@article{halpern2012index,
+	title = {An index to assess the health and benefits of the global ocean},
+	author = {Halpern, Benjamin S. and Longo, Catherine and Hardy, Darren and McLeod, Karen L. and Samhouri, Jameal F. and Katona, Steven K. and Kleisner, Kristin and Lester, Sarah E. and {O{\textquoteright}Leary}, Jennifer and Ranelletti, Marla and Rosenberg, Andrew A. and Scarborough, Courtney and Selig, Elizabeth R. and Best, Benjamin D. and Brumbaugh, Daniel R. and Chapin, F. Stuart and Crowder, Larry B. and Daly, Kendra L. and Doney, Scott C. and Elfes, Cristiane and Fogarty, Michael J. and Gaines, Steven D. and Jacobsen, Kelsey I. and Karrer, Leah Bunce and Leslie, Heather M. and Neeley, Elizabeth and Pauly, Daniel and Polasky, Stephen and Ris, Bud and Martin, Kevin St and Stone, Gregory S. and Sumaila, U. Rashid and Zeller, Dirk},
+	year = {2012},
+	date = {2012},
+	journal = {Nature},
+	doi = {10.1038/nature11397},
+	url = {http://www.nature.com/nature/journal/vaop/ncurrent/full/nature11397.html},
+	note = {Citation Key: halpern2012index},
+	langid = {en}
+}
