--- a/data-layers/data-layer-descriptions.qmd
+++ b/data-layers/data-layer-descriptions.qmd
@@ -1,8 +1,9 @@
 ---
 title: "Description of Data Layers"
+bibliography: ../references.bib
 toc: true
 callout-icon: false
-callout-appearance: simple
+callout-appearance: minimal
 ---
 
 ### Tables describing data layers (Table 7.1) and sources (Table 7.2)
@@ -118,3 +119,17 @@ kable(ds_source) %>%
 <!-- ## Need to run CombineLayers.R to create the relevant Rmd file -->
 <!-- # 'https://raw.githubusercontent.com/OHI-Science/ohi-global/draft/documents/methods/layers_all.Rmd' -->
 
+
+Notes for continuing this work: 
+
+- consider making this into 2 sections with the first 2 tables in the first section and the veeeeery long github user content (all layers Rmd) as the second section (it's extremely long... like super long and could be frustrating for users). 
+
+- look into formatting of long tables in Quarto websites (currently annoying to scroll to the side to read the full width of the long table -- see Table 7.1) -- floating/hover (not anchored to the bottom) scroll bar (horizontal scroll bar)
+
+- make a section of which data layers apply to which goals -- like Table 7.1, maybe just edit it so Dimension (goal/subgoal) is before description?
+
+- consider renaming tables (current names not awesome)
+
+- try reading in the githubuser content (even though it's super long, could be good to just see what it looks like...)
+
+## References
