--- a/models/models.qmd
+++ b/models/models.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Models"
 toc: TRUE
+bibliography: ../references.bib
 editor_options: 
   chunk_output_type: console
 callout-icon: false
@@ -406,3 +407,6 @@ $$
 where $y_{S,i}$ are the social integrity measures specific to the goal.
 
 Ideally, assessments of social resilience would include state and federal level rules and other relevant institutional mechanisms as well. However, such information is extremely difficult to access for every single country, and so we relied on global datasets that focus on international treaties and assessments. Another key gap is information on social norms and community (and other local-scale) institutions (such as tenure or use rights) that influence resource use and management in many settings. Information on these institutions is also extremely difficult to find at a global scale, although the World Governance Indicator [@kaufmann2010worldwide] partly measures their effectiveness through its inclusion of corruption indices.
+
+
+## References
