updates to website. Fixing tables 7.1 and 7.2 in layers. Removing child stuff.

--- a/OHI-theory.qmd
+++ b/OHI-theory.qmd
@@ -9,7 +9,7 @@ toc: true
 
 The Ocean Health Index assesses ocean health which we define as how well we are sustainably managing the resources that we want and need from the ocean (e.g., tourism and recreation, food provisioning).
 
-The OHI is considered a composite indicator because it combines many indicators into a comprehensive framework describing ocean health. This is in contrast to focusing on individual indicators, such as phosphate levels, sedimentation, biodiversity, etc. Individual indicators are important, but they provide limited information when it comes to evaluating how well an overall ecosystem is functioning. Another shortcoming of individual indicators is that they do not directly describe what we actually care about, and consequently, focusing on them can hinder communication. For example, most people do not directly care about nutrient pollution, however, we do care about its effects on the ocean’s ability to provide recreation and food.
+The OHI combines many indicators into a comprehensive framework describing ocean health. This is in contrast to focusing on individual indicators, such as phosphate levels, sedimentation, biodiversity, etc. Individual indicators are important, but they provide limited information when it comes to evaluating how well an overall ecosystem is functioning. They also fail to directly assess what we actually care about in most cases, and consequently, focusing on them can hinder communication. For example, most people do not directly care about nutrient pollution, however, we do care about its effects on the ocean’s ability to provide recreation and food.
 
 Without an overall framework to evaluate indicators, certain indicators may be overemphasized relative to their true importance due to researcher bias (most researchers believe their area of study is the most important), trends in research (what is currently considered a hot topic and is funded), and availability of data (e.g., some data is easier to collect). A model that combines multiple indicators will inevitably have flaws, but at least we know which variables are included and how they are weighted.
 
